--- a/.github/workflows/clang-format.yml
+++ b/.github/workflows/clang-format.yml
@@ -14,8 +14,15 @@ jobs:
       - name: Check out the repository
         uses: actions/checkout@v2
 
-      - name: Install Clang-Format
-        run: sudo apt-get install -y clang-format-10
+- name: Add LLVM repository
+  run: |
+    wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
+    sudo add-apt-repository "deb http://apt.llvm.org/focal/ llvm-toolchain-focal-10 main"
+    sudo apt-get update
+
+- name: Install Clang-Format 10
+  run: sudo apt-get install -y clang-format-10
+
 
       - name: Run Clang-Format
         run: |
