--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,9 @@ jobs:
     steps:
     - name: Check out Git repository
       uses: actions/checkout@v2
+      
+    - name: Format code
+      run: clang-format -i **/*.cpp
 
     - name: Run Super-Linter
       uses: github/super-linter@v4
