--- a/bmi_project/.stylelintrc
+++ b/bmi_project/.stylelintrc
@@ -1,10 +1,10 @@
 {
+  "extends": "stylelint-config-standard",
   "rules": {
     "indentation": 2,
     "color-hex-case": "lower",
     "color-function-notation": "modern",
     "alpha-value-notation": "percentage",
-    "selector-attribute-quotes": "always",
-    "at-rule-no-unknown": null
+    "selector-attribute-quotes": "double"
   }
 }
