--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,47 +1,60 @@
-name: CI/CD Pipeline
+name: pre-commit
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
-  lint:
+  pre-commit:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Check out Git repository
-      uses: actions/checkout@v2
-      
-    - name: Format code
-      run: clang-format -i **/*.cpp
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Run Super-Linter
-      uses: github/super-linter@v4
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
 
-    - name: Set up Python environment
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pre-commit
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Install ChromeDriver
-      run: |
-        CHROME_VERSION=$(google-chrome --version | cut -f3 -d' ' | cut -f1 -d'.')
-        DRIVER_VERSION=$(curl --location --request GET 'https://chromedriver.storage.googleapis.com/LATEST_RELEASE_'$CHROME_VERSION)
-        wget https://chromedriver.storage.googleapis.com/$DRIVER_VERSION/chromedriver_linux64.zip
-        unzip chromedriver_linux64.zip
-        sudo mv chromedriver /usr/local/bin/
-        sudo chmod +x /usr/local/bin/chromedriver
-    - name: Run Django tests
-      run: python manage.py test
+      - name: Run pre-commit
+        run: |
+          pre-commit run --all-files --verbose || ( git status --short ; git diff ; exit 1 )
 
-    - name: Deploy to Heroku (staging)
-      if: github.ref == 'refs/heads/main'
-      run: |
-        git remote add heroku https://heroku:$HEROKU_API_KEY@git.heroku.com/SWQA-Project2-3.git
-        git push heroku main
-      env:
-        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      - name: Stylelint fix
+        run: |
+          npx stylelint "**/*.css" --fix
+
+      - name: Test if stylelint fixed issues
+        run: |
+          git diff --quiet || ( git status --short ; git diff ; exit 1 )
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v2.5.0
+        with:
+          node-version: '14'
+
+      - name: Install prettier
+        run: npm install prettier
+
+      - name: Format with prettier
+        run: npx prettier "**/*.{js,json,md,css,less,scss,html,yml}" --write
+
+      - name: Install isort
+        run: pip install isort==5.9.3
+
+      - name: Format with isort
+        run: isort .
+
+      - name: Lint with flake8
+        run: flake8
+
+      - name: Lint with black
+        run: black --check .
+
+      - name: Test if formatting fixed issues
+        run: |
+          git diff --quiet || ( git status --short ; git diff ; exit 1 )
+
