--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pre-commit
+          pre-commit install
 
       - name: Run pre-commit
         run: |
@@ -57,4 +58,3 @@ jobs:
       - name: Test if formatting fixed issues
         run: |
           git diff --quiet || ( git status --short ; git diff ; exit 1 )
-
