--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,15 +14,14 @@ jobs:
         with:
           python-version: 3.8
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pre-commit
-          pre-commit install
+      - name: Install pre-commit
+        run: pip install pre-commit
+
+      - name: Set up pre-commit
+        run: pre-commit install
 
       - name: Run pre-commit
-        run: |
-          pre-commit run --all-files --verbose || ( git status --short ; git diff ; exit 1 )
+        run: pre-commit run --all-files --verbose || ( git status --short ; git diff ; exit 1 )
 
       - name: Stylelint fix
         run: |
