--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,22 +9,22 @@ repos:
     hooks:
     -   id: black
         name: Black
--   repo: https://github.com/prettier/prettier
-    rev: 2.4.1
+-   repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v2.4.1
     hooks:
     -   id: prettier
         name: Prettier
-        entry: prettier --write
+        args: [--write]
         types: [javascript, json, markdown, css, less, scss, html, yaml]
 -   repo: https://github.com/PyCQA/isort
     rev: 5.9.3
     hooks:
     -   id: isort
         name: isort
--   repo: https://github.com/stylelint/stylelint
-    rev: 14.1.0
+-   repo: https://github.com/awebdeveloper/pre-commit-stylelint
+    rev: v14.1.0
     hooks:
     -   id: stylelint
         name: Stylelint
         entry: npx stylelint "**/*.css"
-        types: [css]
+        files: \.css$
