--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,10 +21,9 @@ repos:
     hooks:
     -   id: isort
         name: isort
--   repo: https://github.com/addicted-user/stylelint-pre-commit-hook
-    rev: v1.0.1
+-   repo: https://github.com/kevinjalbert/pre-commit-stylelint
+    rev: 1.0.0
     hooks:
     -   id: stylelint
         name: Stylelint
-        entry: npx stylelint "**/*.css"
         files: \.css$
