--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,8 @@
 [build-system]
-requires = ["setuptools>=42", "wheel"]
+requires = [
+    "setuptools>=42",
+    "wheel"
+]
 build-backend = "setuptools.build_meta"
 
 [tool.isort]
@@ -14,7 +17,7 @@ disable = "C0103"
 
 [tool.flake8]
 max-line-length = 88
-extend-ignore = E203,W503
+extend-ignore = E203, W503
 
 [tool.pre-commit]
 exclude = '.ipynb_checkpoints'
