--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,9 @@ jobs:
           pip install pre-commit
           pip install isort==5.9.3
           npm install prettier
+          
+      - name: Install dependencies with Poetry
+        run: poetry install
 
       - name: Set up pre-commit
         run: pre-commit install --install-hooks
