--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,20 +14,15 @@ jobs:
         with:
           python-version: 3.8
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2.5.0
-        with:
-          node-version: '14'
+      - name: Install Poetry
+        run: |
+          curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
+          source $HOME/.poetry/env
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install pre-commit
-          pip install isort==5.9.3
+          poetry install
           npm install prettier
-          
-      - name: Install dependencies with Poetry
-        run: poetry install
 
       - name: Set up pre-commit
         run: pre-commit install --install-hooks
@@ -55,3 +50,4 @@ jobs:
       - name: Test if black fixed issues
         run: |
           git diff --quiet || ( git status --short ; git diff ; exit 1 )
+
