--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,3 +35,8 @@ pre-commit = "^2.15.0"
 [tool.poetry.dev-dependencies]
 
 [tool.poetry.extras]
+example = [
+    "requests>=2.25.1",
+    "beautifulsoup4>=4.9.3"
+]
+
